Fixed too big message input field

--- a/src/components/global-chat/global-chat.css
+++ b/src/components/global-chat/global-chat.css
@@ -8,6 +8,7 @@
   font-family: inherit;
   background-color: #f5f4f6;
   border: none;
+  margin: 0;
 }
 
 .chat {
